--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
-np
-soundfile
-scipy
+opencv-python
+line_profiler
+gtts
+playsound
+mutagen
+pydub
+moviepy
+ffmpeg
+replicate
+pyyaml
+urllib3
+HTMLParser
